# gradable-manifold-geometry

./: .gitignore  CITATION.cff  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
aom/: README.md  __init__.py  utils.py
docs/: CARRIER_VS_ACTUATOR_EVIDENCE.md  GRADABLE_MANIFOLD_ONE_PAGER.md  SCALAR_TRANSFER_3DOMAIN_SUMMARY.md
scripts/: analyze_gradable_manifold_claim_diagnostics.py  analyze_gradable_size_geometry.py  check_gradable_claim_numbers.py  extract_gradable_size_activations.py  generate_gradable_age_v1_1.py  generate_gradable_age_v1_2.py  generate_gradable_size_v1_1.py  generate_gradable_size_v1_2.py  generate_gradable_size_v2.py  generate_gradable_temperature_v1.py  generate_gradable_temperature_v1_1.py  generate_gradable_temperature_v1_2.py  generate_gradable_v1_3.py  make_gradable_cross_domain_delta_rho_controls.py  patch_gradable_cross_domain_low_rank_control.py  patch_gradable_cross_domain_subspace_transfer.py  patch_gradable_size_low_rank.py  patch_gradable_size_raw.py  recompute_gradable_behavior_metrics.py  run_gradable_cross_domain_delta_basis_transfer.sh  run_gradable_cross_domain_low_rank_control.sh  run_gradable_cross_domain_subspace_transfer.sh  run_gradable_size_geometry.sh  run_gradable_size_low_rank_patch.sh  run_gradable_size_prior_diagnostics.sh  run_gradable_size_raw_patch.sh  run_gradable_size_steering.sh  run_gradable_size_v2_behavior.sh  run_gradable_v1_2_behavior.sh  run_gradable_v1_3_paraphrase_sweep.sh  score_gradable_predicates.py  score_gradable_size_priors.py  steer_gradable_size.py  summarize_gradable_size_v2.py
(+216 files in other folders)
